docs: Complete v6.0.0-GA documentation suite
Phase 1: Core GA Documentation (4 new files)
- GA_RELEASE_GUIDE.md: What's new, breaking changes, upgrade path
- RL_USER_GUIDE.md: User-friendly GRPO workflow generation guide
- DEPLOYMENT_GUIDE.md: Docker, Kubernetes, production deployment
- MIGRATION_GUIDE.md: v5→v6 migration matrix and procedures

Phase 2: Tutorials (10 updated, 3 new)
- Updated 01-build-yawl: Java 21→25, GRPO section, Maven -T 1.5C
- Updated 06-handler: MCP emphasis, OpenSage for AI work items
- Updated 08-mcp-agent: v5.2.0→v6.0.0-GA, GRPO/OpenSage sections
- Updated 07-docker: Structured concurrency, GRPO deployment
- Updated 04-spec: Schema v6.0, GRPO-generated examples
- Updated 05-api: Java 11→25, new v6 endpoints
- Updated 02-build: Virtual threads, yawl-ggen module
- Updated 10-getting-started: GRPO/RL, MCP/A2A, OpenSage
- NEW 11-grpo-workflow-generation: GRPO quick start
- NEW 12-opensage-memory: OpenSage memory tutorial
- NEW 13-virtual-threads-performance: Virtual thread optimization

Phase 3: How-To Guides (4 updated, 3 new)
- Updated deployment/guide: Java 25 JVM flags, GRPO config
- Updated deployment/production: OpenSage, virtual thread tuning
- Updated deployment/java25-checklist: GA validation phase
- Updated deployment/virtual-threads-deploy: Production best practices
- NEW configure-grpo: GRPO engine configuration
- NEW configure-opensage: OpenSage memory setup
- NEW configure-virtual-threads: Virtual thread tuning

Phase 4: Reference Docs (1 updated, 3 new)
- Updated virtual-threads: Expanded configuration reference
- NEW api/grpo-endpoints: GRPO REST API reference
- NEW rl-config-reference: RlConfig parameter reference

Phase 5: Explanation Docs (1 updated, 3 new)
- NEW reinforcement-learning-concepts: GRPO for non-experts
- NEW grpo-workflow-generation: How GRPO generation works
- NEW learning-memory-system: OpenSage architecture

Phase 6: v6 Core Docs (3 updated, 1 new)
- NEW v6/VERSION: 6.0.0-GA version marker
- Updated V6-GA-REL