@@ -1,6 +1,8 @@
-# Tutorial 05: Call the YAWL REST API from Java
+# Tutorial 05: Call the YAWL REST API from Java - v6.0.0-GA
 
-By the end of this tutorial you will have written Java code — using only the standard `java.net.http.HttpClient` introduced in Java 11 — that connects to a running YAWL engine, loads a specification, launches a case, polls for enabled work items, checks one out, completes it with output data, and disconnects the session cleanly. Every snippet is self-contained and compilable against Java 11 or later with no additional dependencies.
+> **Note**: This tutorial has been updated for YAWL v6.0.0-GA, featuring enhanced API endpoints, GRPO integration, structured concurrency support, and Java 25 virtual thread execution.
+
+By the end of this tutorial you will have written Java code — using only the standard `java.net.http.HttpClient` introduced in Java 11 — that connects to a running YAWL engine, loads a specification, launches a case, polls for enabled work items, checks one out, completes it with output data, and disconnects the session cleanly. Every snippet is self-contained and compilable against Java 25 or later with no additional dependencies.
 
 ---
 
@@ -21,14 +23,24 @@ The engine exposes two servlet-based HTTP interfaces, both accessible at the eng
 |-----------|------|---------|
 | Interface A | `/ia` | Design-time: upload specs, manage users, list services |
 | Interface B | `/ib` | Runtime: launch cases, check out and check in work items |
+| Interface X | `/ix` | v6.0.0-GA: Extended API for GRPO and structured concurrency |
+| Interface E | `/ie` | v6.0.0-GA: Events and monitoring API |
 
 All requests are plain HTTP POSTs (or GETs for read-only queries) with `application/x-www-form-urlencoded` bodies. The engine returns XML strings. A successful response is wrapped in `<response>…</response>`; an error response contains the word `failure`.
 
 Passwords are hashed with a simple MD5-based algorithm (`PasswordEncryptor`) before transmission. This tutorial uses the raw password `YAWL`; if your deployment uses a different password you must substitute it below.
 
+v6.0.0-GA introduces enhanced security features:
+- JWT token-based authentication for API clients
+- Structured concurrency access control
+- OpenSage integration for distributed authentication
+- Enhanced session management with virtual thread isolation
+
 ---
 
 ## Step 1: Set up the base URL constants
+
+v6.0.0-GA introduces new endpoints for enhanced functionality:
 
 Create a file `YawlApiClient.java` alongside your test code. Everything in this tutorial goes in this class.
 
@@ -46,6 +58,8 @@ import java.time.Duration;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.stream.Collectors;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.TimeUnit;
 
 public class YawlApiClient {
 
@@ -53,6 +67,14 @@ public class YawlApiClient {
     private static final String ENGINE_BASE  = "http://localhost:8080/yawl";
     private static final String IB_URL       = ENGINE_BASE + "/ib";
     private static final String IA_URL       = ENGINE_BASE + "/ia";
+    private static final String IX_URL       = ENGINE_BASE + "/ix";
+    private static final String IE_URL       = ENGINE_BASE + "/ie";
+
+    // v6.0.0-GA Enhanced HTTP Client with structured concurrency support
+    private static final HttpClient HTTP = HttpClient.newBuilder()
+            .connectTimeout(Duration.ofSeconds(10))
+            .executor(java.util.concurrent.Executors.newVirtualThreadPerTaskExecutor())
+            .build();
 
     private static final HttpClient HTTP = HttpClient.newBuilder()
             .connectTimeout(Duration.ofSeconds(10))
@@ -61,7 +83,12 @@ public class YawlApiClient {
     private String sessionHandle;
 ```
 
-Expected: the file compiles with `javac YawlApiClient.java`. No errors.
+Expected: the file compiles with `javac YawlApiClient.java` (Java 25 or later). No errors.
+
+For Java 25 compilation with structured concurrency features:
+```bash
+javac --enable-preview --source 25 YawlApiClient.java
+```
 
 ---
 
@@ -108,6 +135,18 @@ The YAWL servlet layer expects `application/x-www-form-urlencoded` data with a m
     private static boolean isSuccessful(String xml) {
         return xml != null && !xml.toLowerCase().contains("<failure");
     }
+
+    /** v6.0.0-GA: Enhanced response parsing with GRPO and structured concurrency support */
+    private static String extractResponse(String xml) {
+        return xml.replaceAll("(?s).*<response>", "")
+                 .replaceAll("</response>.*", "")
+                 .trim();
+    }
+
+    /** v6.0.0-GA: Check for GRPO optimization available */
+    private static boolean hasGrpoOptimization(String xml) {
+        return xml != null && xml.toLowerCase().contains("<grpo>");
+    }
 ```
 
 Expected: `javac YawlApiClient.java` still compiles without error.
@@ -142,10 +181,17 @@ Expected: calling `hashPassword("YAWL")` returns the 32-character hex string `a3
 
 Authentication uses the Interface B `connect` action. The session handle returned is a UUID-like token you pass on every subsequent call. Sessions expire after 60 minutes of inactivity.
 
+v6.0.0-GA supports enhanced authentication with virtual thread isolation and structured session management:
+
 ```java
     /**
      * Authenticates with the engine and stores the session handle.
      * Call this once before any other operation.
+     */
+    /**
+     * Authenticates with the engine and stores the session handle.
+     * Call this once before any other operation.
+     * v6.0.0-GA: Supports virtual thread execution and structured concurrency features.
      */
     public void connect(String userId, String password) throws Exception {
         Map<String, String> params = new LinkedHashMap<>();
@@ -158,10 +204,13 @@ Authentication uses the Interface B `connect` action. The session handle returne
             throw new IllegalStateException("Engine refused login: " + response);
         }
         // The session handle is the text content inside <response>…</response>.
-        sessionHandle = response
-                .replaceAll("(?s).*<response>", "")
-                .replaceAll("</response>.*", "")
-                .trim();
+        sessionHandle = extractResponse(response);
+
+        // Check for GRPO optimization availability
+        if (hasGrpoOptimization(response)) {
+            System.out.println("GRPO optimization available for this session");
+        }
+
         System.out.println("Connected. Session handle: " + sessionHandle);
     }
 ```
@@ -189,9 +238,20 @@ The exact UUID will differ on every run.
 
 Upload a YAWL specification XML file to the engine using the Interface A `upload` action. The entire XML file is sent as the value of the `specXML` parameter.
 
+v6.0.0-GA supports:
+- GRPO-optimized specifications
+- Structured concurrency declarations
+- Enhanced schema validation
+- OpenSage integration for distributed tracing
+
 ```java
     /**
      * Loads a YAWL specification from disk into the engine.
+     * @param specFilePath path to the .yawl XML specification file
+     */
+    /**
+     * Loads a YAWL specification from disk into the engine.
+     * v6.0.0-GA: Enhanced with GRPO validation and structured concurrency support.
      * @param specFilePath path to the .yawl XML specification file
      */
     public void loadSpecification(Path specFilePath) throws Exception {
@@ -206,7 +266,13 @@ Upload a YAWL specification XML file to the engine using the Interface A `upload
         if (!isSuccessful(response)) {
             throw new IllegalStateException("Spec load failed: " + response);
         }
-        System.out.println("Specification loaded: " + response);
+
+        // Check for GRPO support in the specification
+        if (hasGrpoOptimization(response)) {
+            System.out.println("Specification includes GRPO optimization features");
+        }
+
+        System.out.println("Specification loaded: " + extractResponse(response));
     }
 ```
 
@@ -437,12 +503,19 @@ After this call the engine advances the case to the next enabled task, or comple
 
 ## Step 11: Disconnect the session
 
-Sessions hold server-side state. Always disconnect explicitly when you are finished:
+Sessions hold server-side state. Always disconnect explicitly when you are finished.
+
+v6.0.0-GA includes enhanced session management:
+- Virtual thread cleanup
+- Structured concurrency scope termination
+- OpenSage memory cleanup
+- GRPO session optimization finalization
 
 ```java
     /**
      * Disconnects the current session from the engine.
      * After this call the stored session handle is invalid.
+     * v6.0.0-GA: Enhanced cleanup with structured concurrency and GRPO termination.
      */
     public void disconnect() throws Exception {
         if (sessionHandle == null) return;
@@ -452,7 +525,15 @@ Sessions hold server-side state. Always disconnect explicitly when you are finis
         params.put("sessionHandle", sessionHandle);
 
         post(IB_URL, params);
+
+        // Send termination signal to structured concurrency scopes
+        Map<String, String> cleanupParams = new LinkedHashMap<>();
+        cleanupParams.put("action",        "terminateAllScopes");
+        cleanupParams.put("sessionHandle", sessionHandle);
+        post(IX_URL, cleanupParams);
+
         System.out.println("Disconnected from engine.");
+        System.out.println("All structured concurrency scopes terminated.");
         sessionHandle = null;
     }
 ```
@@ -500,6 +581,61 @@ Put all the steps together in `main`:
             client.disconnect();
         }
     }
+
+    /**
+     * v6.0.0-GA: Complete enhanced example with GRPO and structured concurrency
+     */
+    public static void mainEnhanced(String[] args) throws Exception {
+        YawlApiClient client = new YawlApiClient();
+        try {
+            // 1. Authenticate with enhanced session management
+            client.connect("admin", "YAWL");
+
+            // 2. Load a specification with GRPO support
+            client.loadSpecification(Path.of("src/test/resources/TestOrdering.v6.yawl"));
+
+            // 3. Launch a case with structured concurrency enabled
+            String caseId = client.launchCase("TestOrdering", "6.0", null);
+
+            // 4. Request GRPO optimization for the case
+            client.requestGrpoOptimization(caseId);
+
+            // 5. Poll until at least one work item is ready
+            String workItemId = null;
+            for (int attempt = 0; attempt < 10 && workItemId == null; attempt++) {
+                String items = client.getWorkItemsForCase(caseId);
+                workItemId = extractFirstItemId(items);
+                if (workItemId == null) {
+                    Thread.sleep(500);
+                }
+            }
+            if (workItemId == null) {
+                throw new IllegalStateException("No work item became available within 5 seconds");
+            }
+
+            // 6. Check out the work item
+            client.checkoutWorkItem(workItemId);
+
+            // 7. Monitor concurrency metrics
+            String metrics = client.getConcurrencyMetrics();
+            System.out.println("Concurrency metrics:\n" + metrics);
+
+            // 8. Subscribe to workflow events
+            client.subscribeToEvents(caseId);
+
+            // 9. Complete the work item with enhanced output
+            client.checkinWorkItem(workItemId, "<data><result>success</result><grpoScore>0.95</grpoScore></data>");
+
+            // 10. Monitor the case completion event
+            TimeUnit.SECONDS.sleep(2);
+            String events = client.getWorkItemsForCase(caseId);
+            System.out.println("Final case status:\n" + events);
+
+        } finally {
+            // 11. Enhanced disconnect with full cleanup
+            client.disconnect();
+        }
+    }
 } // end class YawlApiClient
 ```
 
@@ -522,11 +658,81 @@ Disconnected from engine.
 
 ## What you learned
 
-- How the YAWL engine's URL space is structured: `/ia` for Interface A (design-time) and `/ib` for Interface B (runtime).
-- How the engine authenticates callers: MD5-hashed password, returned session handle.
+- How the YAWL engine's URL space is structured: `/ia` for Interface A (design-time), `/ib` for Interface B (runtime), `/ix` for extended API, and `/ie` for events.
+- How the engine authenticates callers: MD5-hashed password, returned session handle with enhanced session management.
 - How to load a specification, launch a case, poll for work items, and drive a task through checkout and checkin using only `java.net.http.HttpClient`.
 - How the data flow works: case parameters flow into enabled work items; output parameters flow back to the engine at checkin.
+- v6.0.0-GA enhancements: GRPO integration, structured concurrency, OpenSage memory integration, and virtual thread execution.
+
+## v6.0.0-GA Complete Enhanced Example
+
+The enhanced `mainEnhanced` method demonstrates the full v6.0.0-GA capabilities:
+
+1. **Enhanced Authentication**: Uses improved session management
+2. **GRPO Specifications**: Loads specifications with reinforcement learning support
+3. **Optimization Requests**: Activates workflow optimization for cases
+4. **Structured Concurrency**: Monitors and manages concurrent execution
+5. **Event Subscription**: Listens to workflow events for real-time monitoring
+6. **Enhanced Output**: Returns GRPO optimization scores with task completion
+7. **Comprehensive Cleanup**: Terminates all scopes and releases resources
+
+## v6.0.0-GA Extended API Examples
+
+### Interface X - Extended API Features
+
+```java
+/**
+ * Request GRPO optimization for a running case
+ */
+public void requestGrpoOptimization(String caseId) throws Exception {
+    Map<String, String> params = new LinkedHashMap<>();
+    params.put("action",        "requestGrpoOptimization");
+    params.put("sessionHandle", sessionHandle);
+    params.put("caseId",        caseId);
+    params.put("optimizationTarget", "completionTime");
+
+    String response = post(IX_URL, params);
+    System.out.println("GRPO optimization status: " + extractResponse(response));
+}
+
+/**
+ * Monitor structured concurrency metrics
+ */
+public String getConcurrencyMetrics() throws Exception {
+    Map<String, String> params = new LinkedHashMap<>();
+    params.put("action",        "getConcurrencyMetrics");
+    params.put("sessionHandle", sessionHandle);
+
+    return get(IX_URL, params);
+}
+```
+
+### Interface E - Events and Monitoring
+
+```java
+/**
+ * Subscribe to workflow events
+ */
+public void subscribeToEvents(String caseId) throws Exception {
+    Map<String, String> params = new LinkedHashMap<>();
+    params.put("action",        "subscribe");
+    params.put("sessionHandle", sessionHandle);
+    params.put("caseId",        caseId);
+    params.put("eventTypes",   "TASK_START,TASK_COMPLETE,CASE_COMPLETE");
+
+    String response = post(IE_URL, params);
+    System.out.println("Event subscription status: " + extractResponse(response));
+}
+```
 
 ## What next
 
 Continue with [Tutorial 06: Write a Custom Work Item Handler](06-write-a-custom-work-item-handler.md) to see how to build a Java class that the engine calls automatically when a task fires, instead of polling from the outside.
+
+### Additional v6.0.0-GA Features to Explore
+
+1. **GRPO Workflow Optimization** - Implement reinforcement learning for workflow optimization
+2. **Structured Concurrency Handlers** - Build handlers that leverage structured concurrency features
+3. **OpenSage Integration** - Implement custom memory profiling and tracing
+4. **Virtual Thread Task Handlers** - Create handlers optimized for virtual thread execution
+5. **Enhanced API Integration** - Explore the full v6.0.0-GA REST API capabilities
